# pinwout_website

./: .firebaserc  .gitignore  CONTENT_AUDIT.md  DESIGN_SYSTEM.md  MIGRATION_PLAN.md  README.md  firebase.json  flutter_launcher_icons.yaml  pubspec.yaml
.firebase/: hosting.YnVpbGRcd2Vi.cache  hosting.b3V0.cache  hosting.cGlud291dC1uZXh0anMvb3V0.cache
.github/: copilot-instructions.md
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: colors.dart  firebase_options.dart  gravity.dart  gravity_download.dart  header.dart  main.dart  opper.dart  subheader.dart  what_is_pinwout.dart  who_we_are.dart
lib/logo/: opper_icon.dart  opper_logo.dart  pinwout_logo.dart  pinwout_logo_painter.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
pinwout-nextjs/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
pinwout_desktop/: ARCHITECTURE.md  COMPLIANCE.md  DESIGN_PHILOSOPHY.md  DESKTOP_README.md  PROJECT_OVERVIEW.md  PURPOSE.md  QUICKSTART.md  README.md  USER_JOURNEY.md  build.sh  dev-helper.sh  flutter_rust_bridge.yaml  pubspec.yaml
pinwout_desktop/.github/: copilot-instructions.md
pinwout_desktop/lib/: main.dart
pinwout_desktop/rust/: Cargo.toml
pinwout_desktop/rust/src/: api.rs  cardano.rs  lib.rs  transaction.rs  wallet.rs
pinwout_desktop/test/: widget_test.dart
public/: robots.txt
src/app/: globals.css  page.tsx  (+1 more)
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+46 files in other folders)
