[package]
name = "pinwout_cardano"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "2.5.1"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Cardano dependencies
pallas-primitives = "0.30"
pallas-codec = "0.30"
pallas-addresses = "0.30"
pallas-crypto = "0.30"
pallas-traverse = "0.30"

# Additional utilities
hex = "0.4"
bech32 = "0.11"
thiserror = "1.0"

[profile.release]
lto = true
opt-level = "z"
strip = true
